[package]
name = "redis-async-pool"
version = "0.2.2"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
keywords = ["redis", "deadpool", "pool", "async"]
description = "Deadpool manager for asynchronous Redis connections"
repository = "https://github.com/zenria/redis-async-pool" 
license = "MIT OR Apache-2.0"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis="0.17"
deadpool="0.6"
async-trait = "0.1"
rand="0.7"

[dev-dependencies]
async-std={version="1.7", features=["attributes"]}
tokio={version="0.2", features=["rt-core", "rt-threaded", "macros"]}