[package]
name = "redis-async-pool"
version = "0.2.4"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
keywords = ["redis", "deadpool", "pool", "async"]
description = "Deadpool manager for asynchronous Redis connections"
repository = "https://github.com/zenria/redis-async-pool"
license = "MIT OR Apache-2.0"
readme = "Readme.md"

[dependencies]
redis = { version = "0.23.0", features = ['aio', 'streams', 'connection-manager', 'tokio-comp'] }
deadpool = { version = "0.9.5" }
async-trait = { version = "0.1.68" }
rand = { version = "0.8.5" }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
